2004-02-19  Synge Todo  <wistaria@comp-phys.org>

	* Supported installing headers etc.
	
2004-01-16  Synge Todo  <wistaria@comp-phys.org>
	
	* Fixed worker<QMC_WORKER>::work_done() function.

	* Changed measurement type in qmc_impl.h and percolation_impl.h.
	
2003-11-20  Synge Todo  <wistaria@comp-phys.org>

	* version 3.0b4 released.

	- prerequisites: boost-ss-20031116, boost-ss-20031116.patch,
	alps-20031116

	- TODO: optimization, more measurements, license issue.  Bug fixes
	for some mesurements (specific heat in path integral?)...
	
2003-11-20  Synge Todo  <wistaria@comp-phys.org>

	* Fixed susceptibility calculation by means of improved estimator
	in SSE representation.
	
2003-11-16  Synge Todo  <wistaria@comp-phys.org>

	* Fixed specific heat calculation in SSE representation.
	
2003-11-14  Synge Todo  <wistaria@comp-phys.org>
	
	* version 3.0b3 released.

	- prerequisites: boost-ss-20031109, boost-ss-20031109.patch,
	alps-20031114

	- TODO: optimization, improved estimators, more measurements,
	license issue.  Bug fixes for some mesurements...

2003-11-13  Synge Todo  <wistaria@comp-phys.org>
	
	* Added check directory, which contains sample parameter for
	qmc (qmc_mpi) for checking results.
	
2003-11-12  Synge Todo  <wistaria@comp-phys.org>
	
	* Updated copyright and file headers and added program `copyright'.

	* Added exact diagonalization code (from dpQLM) for checking QMC
	results.
	
2003-11-07  Synge Todo  <wistaria@comp-phys.org>
	
	* Added improved estimators for uniform/staggered magnetization^2,
	etc.
	
2003-11-06  Synge Todo  <wistaria@comp-phys.org>
	
	* version 3.0b2 released.

	- prerequisites: boost-ss-20031102, boost-ss-20031102.patch,
	alps-20031105

	- TODO: optimization, improved estimators, more measurements,
	license issue.

2003-11-06  Synge Todo  <wistaria@comp-phys.org>
	
	* Moved measurements into looper/measuerment.h

	* Added is_bipartite member in [path_integral,sse]::parameter_type.
